<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

  <TextView
      android:id="@+id/tvBmi"
      android:text="@string/bmi"
      android:gravity="center"
      android:textSize="30sp"
      android:textColor="@android:color/white"
      android:background="@android:color/holo_blue_light"
      android:layout_width="match_parent"
      android:layout_height="100dp"/>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvBmi"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin">

    <RadioGroup
        android:id="@+id/sexGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <RadioButton
          android:id="@+id/rbMale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:checked="true"
          android:text="@string/male"/>

      <RadioButton
          android:id="@+id/rbFemale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/female"/>
    </RadioGroup>

    <EditText
        android:id="@+id/txtHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sexGroup"
        android:hint="@string/height_hint"
        android:inputType="number"/>

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHeight"
        android:inputType="numberDecimal"
        android:hint="@string/weight_hint"/>

    <Button
        android:id="@+id/btnCalWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWeight"
        android:onClick="onClick"
        android:text="@string/calWeight"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWeight"
        android:layout_toRightOf="@+id/btnCalWeight"
        android:onClick="onClick"
        android:text="@string/about"/>
    
    <Button
        android:id="@+id/btnAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWeight"
        android:layout_toRightOf="@+id/btnAbout"
        android:onClick="onClick"
        android:text="@string/author"/>

    <TextView
        android:id="@+id/tvScope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalWeight"
        android:text="@string/scope"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvAboutContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/aboutContent"
        android:visibility="gone"/>
    
    <TextView
        android:id="@+id/tvAuthorContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/authorContent"
        android:visibility="gone"/>

  </RelativeLayout>

</RelativeLayout>

